implement update game handler
