# docs/swagger.json
@@ -451,6 +451,44 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "update game",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Game"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "UpdateGameInput",
+                        "name": "UpdateGameInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/DTO.UpdateGameInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/skills/": {
@@ -760,6 +798,9 @@
                 "source"
             ],
             "properties": {
+                "config": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -813,6 +854,9 @@
         "DTO.GameResponse": {
             "type": "object",
             "properties": {
+                "config": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -969,6 +1013,32 @@
             "type": "object",
             "properties": {
                 "access_token": {
+                    "type": "string"
+                },
+                "expired_in": {
+                    "type": "string"
+                }
+            }
+        },
+        "DTO.UpdateGameInput": {
+            "type": "object",
+            "properties": {
+                "config": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "friendly_name": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/DTO.CreateSkillInput"
+                    }
+                },
+                "source": {
                     "type": "string"
                 }
             }
